--- a/sfu.html
+++ b/sfu.html
@@ -19,8 +19,8 @@
         <video id="remote" width="320" height="240" autoplay muted controls></video>
         <video id="local" width="160" height="120" autoplay muted controls></video> <br />
 
-        <button class="sessbtn" onclick="window.Pub">Publish</button>
-        <button class="sessbtn" onclick="window.Sub">Subscribe</button>
+        <button class="sessbtn" onclick="window.Pub()">Publish</button>
+        <button class="sessbtn" onclick="window.Sub()">Subscribe</button>
 
         <div id="signalingContainer" style="display: none">
             Client SDP<textarea class="comments" id="publishSDP" readonly="true" rows=10   cols=30   onpropertychange= "this.style.posHeight=this.scrollHeight "></textarea>
