Add .gitignore & Changed attr in video tag & Fixed audio issue when only use audio tag to relay in backend

--- a/alice.html
+++ b/alice.html
@@ -17,11 +17,11 @@
 
     <body>
         I am alice</br>
-        <video id="remote" width="320" height="240" autoplay muted controls></video>
+        <video id="remote" width="320" height="240" autoplay controls></video>
         <video id="local" width="160" height="120" autoplay muted controls></video> <br />
 
         <button class="sessbtn" onclick="window.Pub('alice')">Publish</button>
-        <button class="sessbtn" onclick="window.Sub('alice')">Subscribe</button>
+        <button class="sessbtn" onclick="window.Sub('bob')">Subscribe</button>
 
     </body>
 
