--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="local" width="160" height="120" ></div> <br />
 
         <button onclick="window.Pub('pub')">Publish</button>
-        <button onclick="window.Sub('sub')">Subscribe</button>
+        <!-- <button onclick="window.Sub('sub')">Subscribe</button> -->
 
     </body>
 
